# CellularAutomata_v1

./: CMakeLists.txt  HelperStructs.hpp  README.md  cudahelper.cu  cudahelper.hpp  cudasolver.cu  cudasolver.hpp  graphmodule2d.cpp  graphmodule2d.hpp  jorge.hpp  main.cpp  mainloop.cpp  mainloop.hpp  transferViaPBO.cpp  transferViaPBO.hpp
